samples/_failures_safe/1761498362_d2429e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_93fbddae.c: In function ‘main’:
./samples/SAFE/__tmp_93fbddae.c:138:5: error: ‘init’ undeclared (first use in this function); did you mean ‘int’?
  138 |     init
      |     ^~~~
      |     int
./samples/SAFE/__tmp_93fbddae.c:138:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_93fbddae.c:138:9: error: expected ‘;’ at end of input
  138 |     init
      |         ^
      |         ;
./samples/SAFE/__tmp_93fbddae.c:138:5: error: expected declaration or statement at end of input
  138 |     init
      |     ^~~~
